--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-mongodb = "2.1.0"
 clap = "3.1.6"
+serde = "1.0.136"
+
+[dependencies.mongodb]
+version = "2.1.0"
+default-features = false
+features = ["sync"]
