--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 clap = "3.1.6"
 serde = "1.0.136"
+serde_json = "1.0"
 
 [dependencies.mongodb]
 version = "2.1.0"
@@ -17,3 +18,4 @@ features = ["sync"]
 [dependencies.chrono]
 version = "0.4"
 features = ["serde"]
+
