--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 clap = "3.1.6"
 serde = "1.0.136"
 serde_json = "1.0"
+thiserror = "1.0"
 
 [dependencies.mongodb]
 version = "2.1.0"
